# MyWorkingSpace

./: README.md
BasicCLanguage/: CMakeLists.txt
BasicCLanguage/include/: freiUeben.h
BasicCLanguage/src/: freiUeben.cpp  leetcode.cpp
SlamUeben/: CMakeLists.txt
SlamUeben/data/: circlemovements_v_20.00_w_10.00_2024-05-10_142912.csv  circlemovements_v_20.00_w_10.00_2024-05-22_170357.csv  circlemovements_v_5.00_w_30.00_2024-05-10_142712.csv  kapitel_zwei_circle_movements_2024-05-10_134815.csv  kapitel_zwei_circle_movements_2024-05-10_135525.csv
SlamUeben/include/: correspondence_estimation_omp.h  icp_omp.h
SlamUeben/include/common/: common.h  common_include.h  csv_utils.hpp  kbhit.h  singleton.hpp  transform.h
SlamUeben/include/datatype/: datatype.h
SlamUeben/include/impl/: correspondence_estimation_omp.hpp  icp_omp.hpp
SlamUeben/include/lib/: ekf_ueben_lib.h  libraries_ueben_lib.h
SlamUeben/include/sensors/: imu.h
SlamUeben/include/slam_in_autonomous/kap3/: imu_integration.h
SlamUeben/src/: g2o_uebungen.cpp  slam_ueben_main.cpp  uebung.cpp  vorstellung.cpp
SlamUeben/src/common/: csv_utils.cpp
SlamUeben/src/lib/: ekf_ueben_lib.cpp  libraries_ueben_lib.cpp
SlamUeben/src/slam_in_autonomous/: kapitel_2_3.cpp  kapitel_zwei.cpp
SlamUeben/src/slam_in_autonomous/kap3/: 3_2_2.cpp
SlamUeben/src/tools/: pcd_generate.cpp  transform_calc.cpp
SlamUeben/src/vierzehn_kapiteln_des_SLAMs/kap_7/: 7.2.cpp  7.4.cpp  7.8.1.cpp  7.8.2.cpp  7.8.2_newversion.cpp
SlamUeben/src/vierzehn_kapiteln_des_SLAMs/kapitel_3/: 3.2.cpp  3.6.cpp
SlamUeben/src/vierzehn_kapiteln_des_SLAMs/kapitel_5/: kapitel_5_3.cpp  kapitel_5_4.cpp
SlamUeben/src/vierzehn_kapiteln_des_SLAMs/kapitel_6/: 6.3.cpp  6.3_self.cpp  6.4.cpp  calcTransform.cpp  pcl_icp.cpp  pcl_icp_jiguanju.cpp
library_ueben/: CMakeLists.txt
library_ueben/include/lib/: eigen_ueben_lib.h
library_ueben/src/: eigen_ueben.cpp  eigen_ueben_main.cpp  libraries_ueben_main.cpp
library_ueben/src/lib/: eigen_ueben_lib.cpp  libraries_ueben_lib.cpp
